--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "future_insights",
   "version": "1.0.0",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "dev": "nodemon index.js",
+    "dev": "nodemon --watch ./**/*.ts --exec ts-node index.ts",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -12,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@types/express": "^5.0.0",
     "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -20,7 +21,16 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "mysql2": "^3.13.0",
     "nodemailer": "^6.10.0",
-    "slugify": "^1.6.6"
+    "reflect-metadata": "^0.2.2",
+    "slugify": "^1.6.6",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.21",
+    "typescript": "^5.8.2"
+  },
+  "devDependencies": {
+    "@types/cookie-parser": "^1.4.8",
+    "@types/cors": "^2.8.17"
   }
 }
