--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "commonjs",
   "scripts": {
     "dev": "nodemon --watch ./**/*.ts --exec ts-node index.ts",
-    "start": "nodemon index.js"
+    "start": "node dist/index.js",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Yahya Nashar",
