--- a/client/package.json
+++ b/client/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.0.1",
     "jspdf": "^3.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-i18next": "^15.5.1",
     "react-router-dom": "^7.2.0",
     "zustand": "^5.0.3"
   },
