--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.4.5-lts.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.10.0",
-    "slugify": "^1.6.6"
+    "slugify": "^1.6.6",
+    "xlsx": "^0.18.5"
   }
 }
