--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "luxon": "^3.7.2",
     "mongoose": "^8.10.1",
     "multer": "^1.4.5-lts.1",
+    "node-cron": "^4.2.1",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.10.0",
     "slugify": "^1.6.6",
